Added service files

--- a/crs_msgs/CMakeLists.txt
+++ b/crs_msgs/CMakeLists.txt
@@ -15,11 +15,30 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+set(INTERFACE_DEPS
+  sensor_msgs
+  std_msgs
+)
+
 # find dependencies
 find_package(ament_cmake REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
+find_package(builtin_interfaces REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
+
+set(INTERFACE_FILES
+  srv/LoadPart.srv
+  srv/LocalizeToPart.srv
+)
+
+rosidl_generate_interfaces(${PROJECT_NAME}
+  ${INTERFACE_FILES}
+  DEPENDENCIES ${INTERFACE_DEPS}
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
