--- a/crs_perception/CMakeLists.txt
+++ b/crs_perception/CMakeLists.txt
@@ -20,6 +20,40 @@ find_package(ament_cmake REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
+find_package(crs_msgs REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclcpp_components REQUIRED)
+find_package(PCL REQUIRED)
+find_package(VTK REQUIRED)
+
+include_directories(include
+  SYSTEM
+  ${PCL_INCLUDE_DIRS}
+  ${VTK_INCLUDE_DIRS})
+#link_directories(${PCL_LIBRARY_DIRS})
+#add_definitions(${PCL_DEFINITIONS})
+
+add_library(${PROJECT_NAME}
+  src/model_to_point_cloud.cpp
+)
+target_link_libraries(${PROJECT_NAME} ${PCL_LIBRARIES})
+  
+
+add_library(${PROJECT_NAME}_nodes SHARED
+  src/nodes/localize_to_part.cpp)
+rclcpp_components_register_nodes(${PROJECT_NAME}_nodes "crc_perception::LocalizeToPart")
+target_link_libraries(${PROJECT_NAME}_nodes ${PROJECT_NAME} ${PCL_LIBRARIES})
+ament_target_dependencies(${PROJECT_NAME}_nodes
+  crs_msgs
+)
+
+install(TARGETS
+  ${PROJECT_NAME}
+  ${PROJECT_NAME}_nodes
+  RUNTIME DESTINATION bin
+  LIBRARY DESTINATION lib
+  ARCHIVE DESTINATION lib
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -32,4 +66,5 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+ament_export_dependencies(ament_cmake)
 ament_package()
