--- a/crs_perception/package.xml
+++ b/crs_perception/package.xml
@@ -12,6 +12,7 @@
   <depend>crs_msgs</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
+  <depend>sensor_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
