--- a/crs_perception/CMakeLists.txt
+++ b/crs_perception/CMakeLists.txt
@@ -43,10 +43,23 @@ target_link_libraries(${PROJECT_NAME} ${PCL_LIBRARIES})
 
 add_library(${PROJECT_NAME}_nodes SHARED
   src/nodes/localize_to_part.cpp)
-rclcpp_components_register_nodes(${PROJECT_NAME}_nodes "crc_perception::LocalizeToPart")
+rclcpp_components_register_nodes(${PROJECT_NAME}_nodes "crs_perception::LocalizeToPart")
 target_link_libraries(${PROJECT_NAME}_nodes ${PROJECT_NAME} ${PCL_LIBRARIES})
 ament_target_dependencies(${PROJECT_NAME}_nodes
   crs_msgs
+)
+
+add_executable(test_localize_to_part src/nodes/test_localize_to_part.cpp)
+target_link_libraries(test_localize_to_part ${PROJECT_NAME} ${PCL_LIBRARIES})
+ament_target_dependencies(test_localize_to_part
+  rclcpp
+  crs_msgs
+  std_msgs)
+install(TARGETS test_localize_to_part
+DESTINATION lib/${PROJECT_NAME})
+
+install(DIRECTORY include/
+  DESTINATION include
 )
 
 install(TARGETS
