--- a/crs_support/CMakeLists.txt
+++ b/crs_support/CMakeLists.txt
@@ -32,4 +32,12 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+install(DIRECTORY
+  launch
+  meshes
+  urdf
+  worlds
+  DESTINATION share/${PROJECT_NAME}/
+)
+
 ament_package()
