added mixin file to ignore tesseract_ros packages

--- a/crs_application/package.xml
+++ b/crs_application/package.xml
@@ -8,6 +8,10 @@
   <license>BSD</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  
+  <depend>scxml_core</depend>
+  <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
