--- a/crs_msgs/package.xml
+++ b/crs_msgs/package.xml
@@ -13,6 +13,8 @@
   <depend>builtin_interfaces</depend>
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>trajectory_msgs</depend>
 
   <exec_depend>rosidl_default_runtime</exec_depend>
 
