created the application executive class and all the tasks managers, methods for each manager need to be implemented

--- a/crs_application/package.xml
+++ b/crs_application/package.xml
@@ -12,6 +12,7 @@
   <depend>scxml_core</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
+  <depend>crs_msgs</depend>  
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
