Add missing crs_msgs dependency
This was necessary to build on eloquent for some reason

--- a/crs_motion_planning/package.xml
+++ b/crs_motion_planning/package.xml
@@ -20,6 +20,7 @@
   <depend>sensor_msgs</depend>
   <depend>std_srvs</depend>
   <depend>std_msgs</depend>
+  <depend>crs_msgs</depend>
 
   <depend>tesseract_msgs</depend>
   <depend>tesseract</depend>
