added launch file for application

--- a/crs_application/CMakeLists.txt
+++ b/crs_application/CMakeLists.txt
@@ -65,6 +65,11 @@ install(TARGETS ${PACKAGE_LIBRARIES}
 install(TARGETS ${PROJECT_NAME}_node
 DESTINATION lib/${PROJECT_NAME})
 
+install(DIRECTORY resources launch
+  DESTINATION share/${PROJECT_NAME}/
+  PATTERN ".svn" EXCLUDE
+)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
