--- a/crs_msgs/CMakeLists.txt
+++ b/crs_msgs/CMakeLists.txt
@@ -33,6 +33,8 @@ find_package(trajectory_msgs REQUIRED)
 
 set(MSG_FILES
   msg/ProcessConfiguration.msg
+  msg/ProcessTrajectory.msg
+  msg/ToolProcessPath.msg
 )
 
 set(SRV_FILES
@@ -42,6 +44,7 @@ set(SRV_FILES
   srv/GetConfiguration.srv
   srv/ExecuteAction.srv
   srv/GetAvailableActions.srv
+  srv/PlanProcessPaths.srv
 )
 
 rosidl_generate_interfaces(${PROJECT_NAME}
