--- a/crs_msgs/CMakeLists.txt
+++ b/crs_msgs/CMakeLists.txt
@@ -38,13 +38,14 @@ set(MSG_FILES
 )
 
 set(SRV_FILES
+  srv/CallFreespaceMotion.srv
+  srv/GetROISelection.srv
   srv/LoadPart.srv
   srv/LocalizeToPart.srv
-  srv/CallFreespaceMotion.srv
-  srv/GetConfiguration.srv
   srv/ExecuteAction.srv
   srv/GetAvailableActions.srv
   srv/PlanProcessMotions.srv
+  srv/GetConfiguration.srv
 )
 
 rosidl_generate_interfaces(${PROJECT_NAME}
