Add crs_gui package

--- a/crs_area_selection/CMakeLists.txt
+++ b/crs_area_selection/CMakeLists.txt
@@ -46,7 +46,7 @@ install(
   EXPORT ${PACKAGE_NAME}-targets
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
-  RUNTIME DESTINATION bin
+  RUNTIME DESTINATION lib/${PROJECT_NAME}
   INCLUDES DESTINATION include
 )
 
