implemented trajectory preview functionality, not tested yet

--- a/crs_utils_py/package.xml
+++ b/crs_utils_py/package.xml
@@ -2,15 +2,16 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>crs_utils_py</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <version>0.1.0</version>
+  <description>Python utilities for ros2</description>
   <maintainer email="jrgnichodevel@gmail.com">Jorge Nicho</maintainer>
-  <license>TODO: License declaration</license>
-
+  <license>BSD</license>
   
   <exec_depend>rclpy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
 
+  <!-- These test dependencies are optional
+  Their purpose is to make sure that the code passes the linters -->
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
