--- a/crs_gui/package.xml
+++ b/crs_gui/package.xml
@@ -17,6 +17,7 @@
   <depend>rclcpp</depend>
   <depend>shape_msgs</depend>
   <depend>std_srvs</depend>
+  <depend>crs_msgs</depend>
 
   <export>
 <!--    <rviz plugin="${prefix}/plugin_description.xml"/>-->
