--- a/crs_support/package.xml
+++ b/crs_support/package.xml
@@ -11,9 +11,7 @@
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
-  <depend>gazebo_ros</depend>  
-  <depend>gazebo_plugins</depend>
-  <depend>gazebo_ros_camera</depend>
+  <depend>gazebo</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
