crs_gui: Add load markers on selection
crs_gui: Add load markers on selection

This will likely go away eventually, but it is good for demonstration in the near term.

--- a/crs_gui/package.xml
+++ b/crs_gui/package.xml
@@ -18,6 +18,7 @@
   <depend>shape_msgs</depend>
   <depend>std_srvs</depend>
   <depend>crs_msgs</depend>
+  <depend>crs_motion_planning</depend>
   <exec_depend>xterm</exec_depend>
 
   <export>
