--- a/crs_gui/CMakeLists.txt
+++ b/crs_gui/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(std_srvs REQUIRED)
 
 find_package(crs_area_selection REQUIRED path)
 find_package(crs_msgs REQUIRED)
+find_package(crs_motion_planning REQUIRED)
 
 find_package(Qt5 REQUIRED COMPONENTS
   Core
@@ -80,6 +81,7 @@ target_include_directories(${PROJECT_NAME}_widgets PUBLIC ${crs_area_selection_I
 target_link_libraries(${PROJECT_NAME}_widgets
   Qt5::Widgets
   crs_area_selection::crs_area_selection_area_selection
+  crs_motion_planning::crs_motion_planning_path_processing_utils
 )
 ament_target_dependencies(${PROJECT_NAME}_widgets rclcpp shape_msgs std_srvs crs_msgs)
 
