--- a/crs_gui/CMakeLists.txt
+++ b/crs_gui/CMakeLists.txt
@@ -3,9 +3,11 @@ project(crs_gui VERSION 0.1.0 LANGUAGES CXX)
 
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(pluginlib REQUIRED)
 
 find_package(shape_msgs REQUIRED)
 find_package(std_srvs REQUIRED)
+find_package(rviz2 REQUIRED)
 
 find_package(crs_area_selection REQUIRED path)
 find_package(crs_msgs REQUIRED)
@@ -41,6 +43,10 @@ set(crs_gui_widget_SOURCES
   src/widgets/state_machine_interface_widget.cpp
 )
 
+set(crs_gui_panel_SOURCES
+  src/application_panel.cpp
+)
+
 # Run the MOC on the Qt-related UIs and headers
 qt5_wrap_ui(crs_gui_UIS_H
   ${crs_gui_UIS}
@@ -50,8 +56,12 @@ qt5_wrap_cpp(crs_gui_widget_MOCS
   ${crs_gui_widget_HEADERS}
 )
 
+qt5_wrap_cpp(crs_gui_panel_MOCS
+  include/${PROJECT_NAME}/application_panel.h
+)
+
 # Qt Widgets
-add_library(${PROJECT_NAME}_widgets
+add_library(${PROJECT_NAME}_widgets SHARED
   ${crs_gui_UIS_H}
   ${crs_gui_widget_MOCS}
   ${crs_gui_widget_SOURCES}
@@ -83,6 +93,17 @@ target_link_libraries(${PROJECT_NAME}_widgets
   crs_area_selection::crs_area_selection_area_selection
   crs_motion_planning::crs_motion_planning_path_processing_utils
 )
+
+# Rviz Panel
+add_library(${PROJECT_NAME}_panels SHARED
+  ${crs_gui_panel_MOCS}
+  ${crs_gui_panel_SOURCES}
+)
+target_link_libraries(${PROJECT_NAME}_panels
+  ${PROJECT_NAME}_widgets
+)
+
+
 ament_target_dependencies(${PROJECT_NAME}_widgets rclcpp shape_msgs std_srvs crs_msgs)
 
 ######################
@@ -124,6 +145,7 @@ target_include_directories(${PROJECT_NAME}_state_machine_interface_demo PUBLIC
 #############
 install(
   TARGETS
+    ${PROJECT_NAME}_panels
     ${PROJECT_NAME}_widgets
     ${PROJECT_NAME}_area_selection_demo
     ${PROJECT_NAME}_part_selection_demo
@@ -153,6 +175,10 @@ install(DIRECTORY ui/
   DESTINATION share/${PROJECT_NAME}/ui
 )
 
+install(
+  FILES plugin_description.xml
+  DESTINATION share/${PROJECT_NAME}
+)
 
 #############
 ## Ament ##
@@ -160,8 +186,11 @@ install(DIRECTORY ui/
 ament_export_dependencies(
     ament_cmake
     crs_area_selection
+    pluginlib
     rclcpp
     shape_msgs
     std_srvs)
+
+pluginlib_export_plugin_description_file(rviz_common plugin_description.xml)
 
 ament_package()
