--- a/crs_gui/CMakeLists.txt
+++ b/crs_gui/CMakeLists.txt
@@ -67,6 +67,7 @@ add_library(${PROJECT_NAME}_widgets SHARED
   ${crs_gui_widget_SOURCES}
 )
 set_target_properties(${PROJECT_NAME}_widgets PROPERTIES CXX_STANDARD 14)
+target_compile_options(${PROJECT_NAME}_widgets PUBLIC -mno-avx)
 target_include_directories(${PROJECT_NAME}_widgets PUBLIC
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
     "$<INSTALL_INTERFACE:include>")
@@ -126,6 +127,7 @@ target_include_directories(${PROJECT_NAME}_part_selection_demo PUBLIC
     "$<INSTALL_INTERFACE:include>")
 
 add_executable(${PROJECT_NAME}_crs_application_demo src/nodes/crs_application_demo.cpp)
+target_compile_options(${PROJECT_NAME}_crs_application_demo PUBLIC -mno-avx)
 target_link_libraries(${PROJECT_NAME}_crs_application_demo ${PROJECT_NAME}_widgets)
 set_target_properties(${PROJECT_NAME}_crs_application_demo PROPERTIES CXX_STANDARD 14)
 target_include_directories(${PROJECT_NAME}_crs_application_demo PUBLIC
