--- a/crs_support/package.xml
+++ b/crs_support/package.xml
@@ -11,9 +11,14 @@
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+  <exec_depend>xacro</exec_depend>
+  <exec_depend>gazebo</exec_depend>  
   <exec_depend>gazebo_ros</exec_depend>
+  <exec_depend>gazebo_plugins</exec_depend>
+  <exec_depend>gazebo_dev</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
+    <gazebo_ros gazebo_model_path="${prefix}/meshes" />
   </export>
 </package>
