--- a/crs_motion_planning/package.xml
+++ b/crs_motion_planning/package.xml
@@ -44,6 +44,8 @@
   <depend>yaml-cpp</depend>
   <depend>action_msgs</depend>
   <depend>visualization_msgs</depend>
+  
+  <build_depend>libompl-dev</build_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
