--- a/crs_support/package.xml
+++ b/crs_support/package.xml
@@ -12,6 +12,9 @@
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
   <depend>gazebo</depend>
+  <depend>gazebo_plugins</depend>
+  <depend>gazebo_ros</depend>
+  <depend>gazebo_ros_camera</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
