--- a/crs_application/package.xml
+++ b/crs_application/package.xml
@@ -14,6 +14,8 @@
   <depend>rclcpp_components</depend>
   <depend>crs_msgs</depend>  
   <depend>tf2_eigen</depend>
+  <depend>rclcpp_action</depend>
+  <depend>control_msgs</depend>
   
   <exec_depend>launch_xml</exec_depend>
 
