added action client for trajectory execution, WIP

--- a/crs_motion_planning/CMakeLists.txt
+++ b/crs_motion_planning/CMakeLists.txt
@@ -39,6 +39,7 @@ find_package(action_msgs REQUIRED)
 find_package(visualization_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(trajectory_msgs REQUIRED)
+find_package(control_msgs REQUIRED)
 
 find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
@@ -57,6 +58,7 @@ target_include_directories(${PROJECT_NAME}_path_processing_utils PUBLIC
   ${tf2_eigen_INCLUDE_DIRS}
   ${tf2_ros_INCLUDE_DIRS}
   ${tf2_geometry_msgs_INCLUDE_DIRS}
+  ${control_msgs_INCLUDE_DIRS}
   )
 target_link_libraries(${PROJECT_NAME}_path_processing_utils
   ${YAML_CPP_LIBRARIES}
@@ -66,6 +68,7 @@ target_link_libraries(${PROJECT_NAME}_path_processing_utils
   ${tf2_eigen_LIBRARIES}
   ${tf2_ros_LIBRARIES}
   ${tf2_geometry_msgs_LIBRARIES}
+  ${control_msgs_LIBRARIES}
   tesseract::tesseract_common
   Eigen3::Eigen
   )
@@ -81,6 +84,7 @@ target_include_directories(${PROJECT_NAME}_path_planning_utils PUBLIC
   ${tf2_eigen_INCLUDE_DIRS}
   ${tf2_ros_INCLUDE_DIRS}
   ${tf2_geometry_msgs_INCLUDE_DIRS}
+  ${control_msgs_INCLUDE_DIRS}
   )
 target_link_libraries(${PROJECT_NAME}_path_planning_utils
   ${PROJECT_NAME}_path_processing_utils
@@ -91,6 +95,7 @@ target_link_libraries(${PROJECT_NAME}_path_planning_utils
   ${tf2_eigen_LIBRARIES}
   ${tf2_ros_LIBRARIES}
   ${tf2_geometry_msgs_LIBRARIES}
+  ${control_msgs_LIBRARIES}
   ur_ikfast_kinematics::ur10e_ikfast
   tesseract::tesseract
   tesseract::tesseract_motion_planners_trajopt
@@ -121,6 +126,7 @@ target_include_directories(${PROJECT_NAME}_motion_planning_server PUBLIC
   ${tf2_INCLUDE_DIRS}
   ${tf2_eigen_INCLUDE_DIRS}
   ${tf2_ros_INCLUDE_DIRS}
+  ${control_msgs_INCLUDE_DIRS}
   )
 target_link_libraries(${PROJECT_NAME}_motion_planning_server
   ${PROJECT_NAME}_path_planning_utils
@@ -135,6 +141,7 @@ target_link_libraries(${PROJECT_NAME}_motion_planning_server
   ${tf2_LIBRARIES}
   ${tf2_eigen_LIBRARIES}
   ${tf2_ros_LIBRARIES}
+  ${control_msgs_LIBRARIES}
   ${visualization_msgs_LIBRARIES}
   )
 
@@ -155,6 +162,7 @@ target_include_directories(${PROJECT_NAME}_process_planner_test PUBLIC
   ${tf2_INCLUDE_DIRS}
   ${tf2_eigen_INCLUDE_DIRS}
   ${tf2_ros_INCLUDE_DIRS}
+  ${control_msgs_INCLUDE_DIRS}
   )
 target_link_libraries(${PROJECT_NAME}_process_planner_test
   ${PROJECT_NAME}_path_planning_utils
@@ -169,6 +177,7 @@ target_link_libraries(${PROJECT_NAME}_process_planner_test
   ${tf2_LIBRARIES}
   ${tf2_eigen_LIBRARIES}
   ${tf2_ros_LIBRARIES}
+  ${control_msgs_LIBRARIES}
   ${visualization_msgs_LIBRARIES}
   )
 
@@ -218,6 +227,7 @@ ament_export_dependencies(
     rclcpp
     rclcpp_action
     crs_msgs
+    control_msgs
     tesseract_motion_planners
     tesseract_rosutils
     ur_ikfast_kinematics
