--- a/crs_motion_planning/package.xml
+++ b/crs_motion_planning/package.xml
@@ -21,6 +21,7 @@
   <depend>std_srvs</depend>
   <depend>std_msgs</depend>
   <depend>crs_msgs</depend>
+  <depend>control_msgs</depend>
 
   <depend>tesseract_msgs</depend>
   <depend>tesseract</depend>
