--- a/crs_motion_planning/package.xml
+++ b/crs_motion_planning/package.xml
@@ -45,6 +45,8 @@
   <depend>yaml-cpp</depend>
   <depend>action_msgs</depend>
   <depend>visualization_msgs</depend>
+
+  <depend>iterative_spline_parameterization</depend>
   
   <export>
     <build_type>ament_cmake</build_type>
