--- a/crs_gui/CMakeLists.txt
+++ b/crs_gui/CMakeLists.txt
@@ -13,8 +13,6 @@ find_package(crs_area_selection REQUIRED path)
 find_package(crs_msgs REQUIRED)
 find_package(crs_motion_planning REQUIRED)
 
-find_package(iterative_spline_parameterization REQUIRED)
-
 find_package(Qt5 REQUIRED COMPONENTS
   Core
   Widgets
@@ -94,6 +92,7 @@ target_link_libraries(${PROJECT_NAME}_widgets
   Qt5::Widgets
   crs_area_selection::crs_area_selection_area_selection
   crs_motion_planning::crs_motion_planning_path_processing_utils
+  ${YAML_CPP_LIBRARIES}
 )
 
 # Rviz Panel
