--- a/crs_gui/CMakeLists.txt
+++ b/crs_gui/CMakeLists.txt
@@ -23,8 +23,6 @@ find_package(crs_area_selection REQUIRED path)
 find_package(crs_msgs REQUIRED)
 find_package(crs_motion_planning REQUIRED)
 
-find_package(iterative_spline_parameterization REQUIRED)
-
 find_package(Qt5 REQUIRED COMPONENTS
   Core
   Widgets
@@ -104,6 +102,7 @@ target_link_libraries(${PROJECT_NAME}_widgets PUBLIC
   Qt5::Widgets
   crs_area_selection::crs_area_selection_area_selection
   crs_motion_planning::crs_motion_planning_path_processing_utils
+  ${YAML_CPP_LIBRARIES}
 )
 ament_target_dependencies(${PROJECT_NAME}_widgets PUBLIC rclcpp shape_msgs std_srvs crs_msgs)
 
